--- a/gb/19/7/5/n11366547.md
+++ b/gb/19/7/5/n11366547.md
@@ -1,57 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/viliqq330/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/viliqq330/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/viliqq330/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/viliqq330/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>华为未完全退出美限制名单 专家：供应链仍须保持警觉</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年07月05日讯】（大纪元记者庄丽存台湾台北报导）<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>总统川普与中国大陆国家主席习近平在G20会谈后，川普表示，美国供应商可以在不威胁美国国家安全前提下，继续向<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>供货，但华为是否能完全退出“限制名单”仍存在不确定性。专家表示，目前看来华为未完全退出美限制名单，<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>仍须保持警觉并留意后续发展。</p>
-<p>资诚税务咨询顾问公司执行董事苏宥人指出，虽然“出口管制”听起来像与特殊商品之限制(如武器或两用技术等等)有关，但<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>EAR(出口管制规定)并非如此，其范围涵盖几乎所有源自美国(U.S. origin)或位于美国的有形和无形(如软体)产品，应遵守相关规定的供应商，也不仅限于美国企业。换言之，台湾、日本、欧洲等厂商都必须配合EAR规定，未获许可前不得将美国晶片、软体等产品出售给受限制的对象。</p>
+<p>【大纪元2019年07月05日讯】（大纪元记者庄丽存台湾台北报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>总统川普与中国大陆国家主席习近平在G20会谈后，川普表示，美国供应商可以在不威胁美国国家安全前提下，继续向<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>供货，但华为是否能完全退出“限制名单”仍存在不确定性。专家表示，目前看来华为未完全退出美限制名单，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>仍须保持警觉并留意后续发展。</p>
+<p>资诚税务咨询顾问公司执行董事苏宥人指出，虽然“出口管制”听起来像与特殊商品之限制(如武器或两用技术等等)有关，但<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>EAR(出口管制规定)并非如此，其范围涵盖几乎所有源自美国(U.S. origin)或位于美国的有形和无形(如软体)产品，应遵守相关规定的供应商，也不仅限于美国企业。换言之，台湾、日本、欧洲等厂商都必须配合EAR规定，未获许可前不得将美国晶片、软体等产品出售给受限制的对象。</p>
 <p>苏宥人说，若产品100%在美国制造，极高概率会落入管制范围内。惟在国际贸易和全球分工高度发展之环境下，一个产品在从零到有过程中，可能走遍全世界，不同制造步骤由不同国家厂商执行，使一个产品可能涵盖几个不同国家的成分、元件或技术。</p>
 <p>他举例，假设美国境内的A公司制造一个晶片，再送到台湾的甲公司，甲公司将该晶片用在其自行研发制造的电子产品中，最终产品认定为台湾制造，但该产品中不可分割之美国制造晶片，是否也受EAR管制则需更进一步厘清。</p>
-<p>最后，苏宥人建议，中美贸易关系仍不稳定，属于<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>或其他中国大陆大厂<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>的<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%8F%B0%E5%95%86.md#1">台商</a>仍需保持警觉并留意后续发展。相关供应链的公司应请专家协助，并保留详细计算纪录和专家计算报告，以及所使用的原始凭证，并持续留意美国主管机关所发布的新法规或对既有法规的新解释，以即时因应中美贸易战的新冲击，避免因违反美国出口管制规定而遭受罚则。</p>
+<p>最后，苏宥人建议，中美贸易关系仍不稳定，属于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>或其他中国大陆大厂<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E5%95%86.md#1">台商</a>仍需保持警觉并留意后续发展。相关供应链的公司应请专家协助，并保留详细计算纪录和专家计算报告，以及所使用的原始凭证，并持续留意美国主管机关所发布的新法规或对既有法规的新解释，以即时因应中美贸易战的新冲击，避免因违反美国出口管制规定而遭受罚则。</p>
 <p>责任编辑：郑桦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/19/6/29/n11354582.md#1">放生华为？川普记者会上这么说</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/19/6/30/n11354831.md#1">黑客攻击华为竞争对手 中共大量盗西方技术</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/19/6/30/n11355821.md#1">库德洛：川普对华为的决定并非大赦</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/19/7/4/n11364737.md#1">美司法部反击 要法庭驳回华为起诉美政府案</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/31/n12297719.md#1">口腔癌治疗致颜面受损 移植术重建外观恢复自信</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/31/n12297705.md#1">和硕大楼停车场违规建餐厅 柯文哲：我带队去拆</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/31/n12297688.md#1">李登辉逝 台北宾馆开放悼念</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/31/n12297645.md#1">李登辉辞世 台北101晚间点灯表达哀悼</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/31/n12297165.md#1">哀悼李登辉 AIT降半旗三天</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/31/n12297125.md#1">蔡英文：李登辉以“宁静革命”带领台湾走出威权</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/29/n11354582.md#1">放生华为？川普记者会上这么说</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/30/n11354831.md#1">黑客攻击华为竞争对手 中共大量盗西方技术</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/30/n11355821.md#1">库德洛：川普对华为的决定并非大赦</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/4/n11364737.md#1">美司法部反击 要法庭驳回华为起诉美政府案</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680821.md#1">俄拟立法限不友善国家人民入境 外交部：评估影响范围</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678778.md#1">台国安局长陈明通：乌俄冲突或长期化 边打边谈</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679384.md#1">接见美国民主基金会长 苏贞昌：全球民主伙伴团结合作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678783.md#1">台国安局长：美将介入台海更深</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679001.md#1">淘汰贪污涉赌议员 台公督盟提不适任指标</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678848.md#1">美民主基金会长访台 将在台办世界民主运动会</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045322.md#1" target="_blank">《苦菜花》人物原型的真实人生（3）</a></li><li><a href="https://github.com/viliqq330/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10309909.md#1" target="_blank">心升：以史为镜看毛邪（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/20/n4014880.md#1" target="_blank">修炼人的故事：从地狱到天堂</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293305.md#1">武汉坠楼护士生前留言曝光 曾曝抗疫黑幕</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12293985.md#1">美国关中领馆效应 亲共者大难临头各自飞</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12293750.md#1">【翻墙必看】蝗灾已在大陆泛滥 麻烦大了</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12295214.md#1">李登辉生前称共产主义骗人 曾评价习近平</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293489.md#1">【新闻看点】美澳军事合作 欧盟27国制裁中共</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293399.md#1">与李晨分手一年 范冰冰首谈失恋心情</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12290343.md#1">亲共举动遭炮轰 谭咏麟关闭脸书IG投奔微博</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12290665.md#1">看完长文只回一个问号 杨幂释由登上热搜榜首</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12291118.md#1">身高18公尺 日本钢弹机器人跨出第一步</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12296166.md#1">杜汶泽悼念李登辉：台湾之父一路好走</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12291800.md#1">在1905年的照片中看到自己 英男相信有前世</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/25/n12283672.md#1">【佳人传】黄氏姐妹的不同人生</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/9/4/4/n2484963.md#1">从《清明上河图》看时代风华（下）</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/16/n12261035.md#1">华盛顿将军系列故事：乔治·华盛顿精神</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/25/n12283826.md#1">散文：忆香港</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/viliqq330/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/viliqq330/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/5/n11366547.htm">华为未完全退出美限制名单 专家：供应链仍须保持警觉</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/5/n11366547.htm">华为未完全退出美限制名单 专家：供应链仍须保持警觉</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/viliqq330/djy/blob/master/gb/19/7/5/n11366547.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/viliqq330/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/viliqq330/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/viliqq330/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/7/5/n11366547.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
